{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 24,
  "lineage": "d77f387b-5663-b231-ed95-783b8fcfc330",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Portfolio-ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:905418310734:loadbalancer/app/portfolio-dev-alb/1980df8bf21682dd",
            "arn_suffix": "app/portfolio-dev-alb/1980df8bf21682dd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "portfolio-dev-alb-1038328187.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:905418310734:loadbalancer/app/portfolio-dev-alb/1980df8bf21682dd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "portfolio-dev-alb",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-04452717b5362ff4c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00effee61a38778c7"
              },
              {
                "subnet_id": "subnet-099922c186eabafa8"
              }
            ],
            "subnets": [
              "subnet-00effee61a38778c7",
              "subnet-099922c186eabafa8"
            ],
            "tags": {
              "Name": "portfolio-dev-alb"
            },
            "tags_all": {
              "Name": "portfolio-dev-alb"
            },
            "vpc_id": "vpc-0c9434aac7c83f712",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:905418310734:loadbalancer/app/portfolio-dev-alb/1980df8bf21682dd"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Portfolio-ALB-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:905418310734:targetgroup/portfolio-dev-alb-tg/032256105b5f228d",
            "arn_suffix": "targetgroup/portfolio-dev-alb-tg/032256105b5f228d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:905418310734:targetgroup/portfolio-dev-alb-tg/032256105b5f228d",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:905418310734:loadbalancer/app/portfolio-dev-alb/1980df8bf21682dd"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "portfolio-dev-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c9434aac7c83f712"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:905418310734:targetgroup/portfolio-dev-alb-tg/032256105b5f228d"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418310734:security-group/sg-04452717b5362ff4c",
            "description": "Allow HTTP and HTTPS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04452717b5362ff4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http and https",
            "name_prefix": "",
            "owner_id": "905418310734",
            "region": "us-east-2",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "portfolio-dev-alb-sg"
            },
            "tags_all": {
              "Name": "portfolio-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9434aac7c83f712"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "sg-04452717b5362ff4c",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418310734:security-group/sg-0e895bda7a417dacd",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e895bda7a417dacd",
            "ingress": [
              {
                "cidr_blocks": [
                  "76.169.33.57/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_SSH",
            "name_prefix": "",
            "owner_id": "905418310734",
            "region": "us-east-2",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "portfolio-dev-bastion-host-sg"
            },
            "tags_all": {
              "Name": "portfolio-dev-bastion-host-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9434aac7c83f712"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "sg-0e895bda7a417dacd",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418310734:security-group/sg-0726aaaf6ec1d76b4",
            "description": "Allow PostgreSQL inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0726aaaf6ec1d76b4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e895bda7a417dacd"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "allow_PostgreSQL",
            "name_prefix": "",
            "owner_id": "905418310734",
            "region": "us-east-2",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "portfolio-dev-rds-sg"
            },
            "tags_all": {
              "Name": "portfolio-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9434aac7c83f712"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "sg-0726aaaf6ec1d76b4",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f78b0f832354aadf",
            "arn": "arn:aws:ec2:us-east-2:905418310734:elastic-ip/eipalloc-0f78b0f832354aadf",
            "association_id": "eipassoc-0a0f2f051507111cd",
            "domain": "vpc",
            "id": "eipalloc-0f78b0f832354aadf",
            "network_border_group": "us-east-2",
            "network_interface": "eni-084a787afdf3187c5",
            "private_dns": "ip-10-0-1-233.us-east-2.compute.internal",
            "private_ip": "10.0.1.233",
            "public_dns": "ec2-16-58-211-149.us-east-2.compute.amazonaws.com",
            "public_ip": "16.58.211.149",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "eipalloc-0f78b0f832354aadf",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418310734:internet-gateway/igw-0cd33e258bdbd050a",
            "id": "igw-0cd33e258bdbd050a",
            "owner_id": "905418310734",
            "region": "us-east-2",
            "tags": {
              "Name": "portfolio-dev-igw"
            },
            "tags_all": {
              "Name": "portfolio-dev-igw"
            },
            "vpc_id": "vpc-0c9434aac7c83f712"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "igw-0cd33e258bdbd050a",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aefb638a2cf5ca57",
            "association_id": "eipassoc-0641fb66760ef1cc8",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-086da705438c26835",
            "network_interface_id": "eni-042a07a075b61c530",
            "private_ip": "10.0.1.235",
            "public_ip": "3.18.99.180",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00effee61a38778c7",
            "tags": {
              "Name": "portfolio-dev-nat-gw"
            },
            "tags_all": {
              "Name": "portfolio-dev-nat-gw"
            },
            "vpc_id": "vpc-0c9434aac7c83f712"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "nat-086da705438c26835",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418310734:route-table/rtb-0f1af3a117e7d3285",
            "id": "rtb-0f1af3a117e7d3285",
            "owner_id": "905418310734",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-086da705438c26835",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "portfolio-dev-private-rt"
            },
            "tags_all": {
              "Name": "portfolio-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9434aac7c83f712"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "rtb-0f1af3a117e7d3285",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418310734:route-table/rtb-082301d53feec2be5",
            "id": "rtb-082301d53feec2be5",
            "owner_id": "905418310734",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd33e258bdbd050a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "portfolio-dev-public-rt"
            },
            "tags_all": {
              "Name": "portfolio-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9434aac7c83f712"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "rtb-082301d53feec2be5",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c76fb306b932269",
            "region": "us-east-2",
            "route_table_id": "rtb-0f1af3a117e7d3285",
            "subnet_id": "subnet-0b92f401cc71426a1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "rtbassoc-03c76fb306b932269",
            "region": "us-east-2"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043bedeac2a3b8afb",
            "region": "us-east-2",
            "route_table_id": "rtb-0f1af3a117e7d3285",
            "subnet_id": "subnet-0ad2be7ded09cd53e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "rtbassoc-043bedeac2a3b8afb",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010bf5fb7556305db",
            "region": "us-east-2",
            "route_table_id": "rtb-082301d53feec2be5",
            "subnet_id": "subnet-00effee61a38778c7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "rtbassoc-010bf5fb7556305db",
            "region": "us-east-2"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07646ac444e3d2d90",
            "region": "us-east-2",
            "route_table_id": "rtb-082301d53feec2be5",
            "subnet_id": "subnet-099922c186eabafa8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "rtbassoc-07646ac444e3d2d90",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418310734:subnet/subnet-0b92f401cc71426a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b92f401cc71426a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418310734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "portfolio-dev-private-subnet-1"
            },
            "tags_all": {
              "Name": "portfolio-dev-private-subnet-1"
            },
            "vpc_id": "vpc-0c9434aac7c83f712"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "subnet-0b92f401cc71426a1",
            "region": "us-east-2"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418310734:subnet/subnet-0ad2be7ded09cd53e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad2be7ded09cd53e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418310734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "portfolio-dev-private-subnet-2"
            },
            "tags_all": {
              "Name": "portfolio-dev-private-subnet-2"
            },
            "vpc_id": "vpc-0c9434aac7c83f712"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "subnet-0ad2be7ded09cd53e",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418310734:subnet/subnet-00effee61a38778c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00effee61a38778c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418310734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "portfolio-dev-public-subnet-1"
            },
            "tags_all": {
              "Name": "portfolio-dev-public-subnet-1"
            },
            "vpc_id": "vpc-0c9434aac7c83f712"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "subnet-00effee61a38778c7",
            "region": "us-east-2"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418310734:subnet/subnet-099922c186eabafa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099922c186eabafa8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418310734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "portfolio-dev-public-subnet-2"
            },
            "tags_all": {
              "Name": "portfolio-dev-public-subnet-2"
            },
            "vpc_id": "vpc-0c9434aac7c83f712"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "subnet-099922c186eabafa8",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:905418310734:vpc/vpc-0c9434aac7c83f712",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03686fcfad70a47cd",
            "default_route_table_id": "rtb-049f19c4a03623e28",
            "default_security_group_id": "sg-082dbeb2fbd5ad67e",
            "dhcp_options_id": "dopt-081440b37fdcead57",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c9434aac7c83f712",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-049f19c4a03623e28",
            "owner_id": "905418310734",
            "region": "us-east-2",
            "tags": {
              "Name": "portfolio-dev-vpc"
            },
            "tags_all": {
              "Name": "portfolio-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "905418310734",
            "id": "vpc-0c9434aac7c83f712",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}